samples/_failures_safe/1761626142_17a5f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dd57cbfb.c: In function ‘main’:
./samples/SAFE/__tmp_dd57cbfb.c:173:32: error: expected ‘)’ at end of input
  173 |     if (len > 0 && input[len-1]
      |        ~                       ^
      |                                )
./samples/SAFE/__tmp_dd57cbfb.c:173:5: error: expected declaration or statement at end of input
  173 |     if (len > 0 && input[len-1]
      |     ^~
